# ts_backtest

./: pyproject.toml
src/ts_backtest/: main.py
